Fixed z-index for burger menu.

--- a/burger.css
+++ b/burger.css
@@ -114,7 +114,7 @@
         display:none; /*Ocultamos el checkbox pues no nos interesa que se vea*/
     }
     .checkbox:checked ~ .nav {
-		z-index: 1;
+		z-index: 2;
         right:0px; /*Le quitamos el left negativo para que el menú vuelva a su posición original*/
         position:fixed; /* Fijamos el menú lateral para que se desplace cuando hagamos scroll*/
     }
